# medical-education-topic-analysis

./: .gitignore  README.md  pyproject.toml
data/: query.txt
outputs/latex/: corpus_stats.json  figure_coherence_comparison.tex  table_bertopic_topics.tex  table_c_npmi_coherence.tex  table_c_v_coherence.tex  table_dataset_stats.tex  table_diversity.tex  table_lda_topics.tex  table_nmf_topics.tex  table_top_journals.tex  table_u_mass_coherence.tex
outputs/results/: bertopic_results.json  comparison.json  lda_results.json  nmf_results.json  performance_results.json
scripts/: 01_data_stats.py  02_preprocess.py  03_run_lda.py  04_run_nmf.py  05_run_bertopic.py  06_evaluate.py  07_export_results.py  08_measure_performance.py
src/topic_analysis/: __init__.py  config.py
src/topic_analysis/data/: __init__.py  loader.py  preprocessing.py  stats.py
src/topic_analysis/evaluation/: __init__.py  coherence.py  comparison.py  diversity.py
src/topic_analysis/models/: __init__.py  bertopic_model.py  lda_model.py  nmf_model.py
src/topic_analysis/visualization/: __init__.py  tables.py  tikz_export.py
